--- a/style.css
+++ b/style.css
@@ -51,16 +51,14 @@ body {
 .search button {
   border: 0;
   outline: 0;
-  border-radius: 100%;
-  height: 40px;
-  width: 60px;
+  border-radius: 60%;
   cursor: pointer;
+  padding: 15px 15px;
+}
+.search button i{
+  color: black;
 }
 
-.search button img {
-  height: 20px;
-  width: 20px;
-}
 
 .weather-icon {
   width: 170px;
